--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "burger",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kyle-krupp/Burger.git"
   },
-  "author": "",
+  "author": "Kyle Krupp",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/kyle-krupp/Burger/issues"
